31.7. fix FilterUtil